--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 	color: #201b2d;
 	padding: 0;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 div, p, input, button, form, span, a, ul, li {
@@ -19,6 +20,20 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 700;
+}
+
+/* For animation */
+.delay-300 {
+	animation-delay: 0.3s;
+}
+.delay-700 {
+	animation-delay: 0.7s;
+}
+.delay-1100 {
+	animation-delay: 1.1s;
+}
+.delay-1500 {
+	animation-delay: 1.5s;
 }
 
 .container {
@@ -107,10 +122,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .feature {
 	padding: 105px 0 115px;
+	overflow: hidden;
 }
 
 .feature__title {
 	margin-bottom: 70px;
+	opacity: 0;
+	transition: 0.3s;
 }
 
 .feature__wrapper {
@@ -123,6 +141,8 @@ h1, h2, h3, h4, h5, h6 {
 	flex-direction: column;
 	width: 315px;
 	align-items: center;
+	opacity: 0;
+	transition: 0.3s;
 }
 
 .feature__item-frame {
@@ -157,9 +177,11 @@ h1, h2, h3, h4, h5, h6 {
 .contacts {
 	padding: 100px 0;
 	background-color: #ecf3f8;
+	overflow: hidden;
 }
 .contacts__title {
 	margin-bottom: 60px;
+	opacity: 0;
 }
 .contacts__form {
 	max-width: 345px;
@@ -177,10 +199,12 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 15px;
 	opacity: 0.55;
 	padding: 15px 20px;
+	opacity: 0;
 }
 
 .contacts__form-btn {
 	width: 100%;
+	opacity: 0;
 }
 
 .footer {
@@ -240,6 +264,7 @@ h1, h2, h3, h4, h5, h6 {
 	}
 	.header__btn {
 		margin-bottom: 5px;
+		opacity: 0;
 	}
 	.header__picture {
 		width: 350px;
@@ -297,6 +322,7 @@ h1, h2, h3, h4, h5, h6 {
 	.header__text {
 		font-size: 15px;
 		line-height: 18px;
+		opacity: 0;
 	}
 	.button {
 		padding: 15px 25px;
